fix empty background placeholder overflowing

--- a/src/app/components/schools-table/schools-table.component.scss
+++ b/src/app/components/schools-table/schools-table.component.scss
@@ -19,7 +19,7 @@
   }
 
   .emptyBackground {
-    width: 100vw;
+    width: 100%;
     height: 50vh;
   }
 }
